fix: Response status
